added log in Student,Transaction controllers and services and minor changes in student and card entity and repository